# author-social-calendar

./: .gitignore  README.md  ai.py  ai_chunked.py  ai_prompt_backup.py  app.py  canva_client.py  design_guidelines.md  fallback_posts.py  gunicorn.conf.py  gunicorn_config.py  holidays.py  image_generator.py  instagram_api.py  models.py  package.json  pyproject.toml  replit.md  sheets.py  start_server.sh  utils.py
static/: brand.css
templates/: base.html  form.html  planner.html  preview.html
